# embedded_queue

./: AGENTS.md  README.md  meson.build
src/: queue.c  queue.h  queue_version.h.in
test/: meson.build  test_queue.c  test_queue_clear.c  test_queue_critical.c  test_queue_fail.c  test_queue_fail_mode.c  test_queue_mt.c  test_queue_overwrite_mt.c  test_queue_soak.c  test_queue_wrap.c
